--- a/Front-End/css/studentMain.css
+++ b/Front-End/css/studentMain.css
@@ -1,4 +1,4 @@
-main{
+main {
     grid-area: main;
     padding: 100px 105px 60px 105px;
     display: flex;
@@ -7,16 +7,16 @@ main{
     gap: 49px;
 }
 
-main h3{
+main h3 {
     color: var(--primary-color);
     text-transform: uppercase;
-    font-size: 1.125rem;  
+    font-size: 1.125rem;
     font-weight: 500;
     font-family: 'Poppins', sans-serif;
     text-shadow: 1px 2px 8px #888888;
 }
 
-article{
+article {
     width: 500px;
     height: 500px;
     display: flex;
@@ -26,9 +26,67 @@ article{
     box-shadow: 1px 1px 12px #bebebe;
 }
 
-.grafic-student{
+.grafic {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column-reverse;
     width: 500px;
     height: 500px;
+    gap: 20px;
     box-shadow: 1px 1px 12px #bebebe;
 }
 
+.grafic-student {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    rotate: -90deg;
+    justify-content: center;
+    gap: 40px;
+}
+.materiasSpan{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    gap: 20px;
+    width: 355px;
+}
+.spans_bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    gap: 38px;
+    width: 355px;
+}
+
+.progress_bar {
+    display: block;
+    appearance: none;
+    width: 300px;
+}
+
+.progress_barAzul {
+    display: block;
+    appearance: none;
+}
+
+.progress_bar::-webkit-progress-bar {
+    background-color: #bebebe;
+}
+
+.progress_barRed::-webkit-progress-value {
+    background-color: red;
+}
+
+.progress_barBlue::-webkit-progress-value {
+    background-color: blue;
+}
+
+.progress_barYellow::-webkit-progress-value {
+    background-color: yellow;
+}
