--- a/Front-End/css/homeMain.css
+++ b/Front-End/css/homeMain.css
@@ -49,6 +49,12 @@ button{
     height: 200px;
     background-color: var(--primary-color);
     border: none;
+    transition: all 400ms ease-in-out;
+    cursor: pointer;
+}
+
+button:hover {
+    transform: scale(1.1);
 }
 
 .class{
@@ -78,19 +84,13 @@ button{
     main {
         grid-template-columns: 35% 25% 40%;
     }
-
-    /* .title{
-        max-width: px;
-    } */
     
     .title h1{
-
         font-size: 3rem;
         font-weight: 300;
     }
 
     .devices-image{
-
         width: 23vw;
     }
 
