--- a/Front-End/css/studentMain.css
+++ b/Front-End/css/studentMain.css
@@ -26,9 +26,86 @@ article{
     box-shadow: 1px 1px 12px #bebebe;
 }
 
-.grafic-student{
+.image-student-select{
+    width: 400px;
+    height: 400px;
+}
+
+.grafic {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column-reverse;
     width: 500px;
     height: 500px;
+    gap: 20px;
     box-shadow: 1px 1px 12px #bebebe;
 }
 
+#grafic-student {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    rotate: -90deg;
+    justify-content: center;
+    gap: 40px;
+
+}
+.materiasSpan{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    gap: 20px;
+    width: 355px;
+}
+.spans_bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    gap: 38px;
+    width: 355px;
+}
+
+.progress_bar {
+    display: block;
+    appearance: none;
+    width: 300px;
+}
+
+.progress_barAzul {
+    display: block;
+    appearance: none;
+}
+
+.progress_bar::-webkit-progress-bar {
+    background-color: #EEEFF8;;
+}
+
+.progress_barRed::-webkit-progress-value {
+    background-color: red;
+}
+
+.progress_barBlue::-webkit-progress-value {
+    background-color: blue;
+}
+
+.progress_barYellow::-webkit-progress-value {
+    background-color: yellow;
+}
+
+/*PARA SPANS*/
+.color-red{
+    color: #C11010;
+}
+
+.color-blue{
+    color: var(--primary-color);
+}
+
+.color-yellow{
+    color: #E5B657;
+}
