--- a/Front-End/css/classMain.css
+++ b/Front-End/css/classMain.css
@@ -11,6 +11,7 @@ main h1 {
   color: var(--primary-color);
   font-size: 4rem;
   font-weight: 500;
+  text-align: center;
 }
 
 main h3 {
@@ -19,6 +20,7 @@ main h3 {
   font-family: "Poppins", sans-serif;
   text-shadow: 1px 2px 8px #3b3b3b;
   text-align: center;
+  text-transform: uppercase;
 }
 
 #list-students {
