--- a/Front-End/css/homeMain.css
+++ b/Front-End/css/homeMain.css
@@ -28,7 +28,6 @@ h1 span{
 
 .devices-image{
     grid-area: image1;
-    /* width: 22vw; */
 }
 
 .student-image{
@@ -76,8 +75,9 @@ button:hover {
 }
 
 .image-icon{
-    width: 60px;
-    height: 60px;
+    width: 90px;
+    height: 90px;
+    filter: brightness(0) invert(1);
 }
 
 @media (max-width: 1395px){
