--- a/Front-End/css/classMain.css
+++ b/Front-End/css/classMain.css
@@ -3,7 +3,8 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  height: auto;
+  overflow: auto;
 }
 
 main h1 {
