--- a/Front-End/css/style.css
+++ b/Front-End/css/style.css
@@ -4,7 +4,7 @@ body{
     "header"
     "main"
     "footer";
-    grid-template-rows: 100px 1fr 140px;
+    grid-template-rows: 10vh 75vh 15vh;
 }
 
 header{
