--- a/Front-End/css/homeMain.css
+++ b/Front-End/css/homeMain.css
@@ -39,14 +39,21 @@ h1 span{
     grid-area: card;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     gap: 50px;
 }
 
 button{
-    width: 400px;
+    width: 23vw;
     height: 200px;
     background-color: var(--primary-color);
     border: none;
+    transition: all 400ms ease-in-out;
+    cursor: pointer;
+}
+
+button:hover {
+    transform: scale(1.1);
 }
 
 .class{
@@ -65,4 +72,27 @@ button{
     font-size: 4rem;
     font-weight: 500;
     text-transform: uppercase;
+}
+
+.image-icon{
+    width: 90px;
+    height: 90px;
+    filter: brightness(0) invert(1);
+}
+
+@media (max-width: 1395px){
+    main {
+        grid-template-columns: 35% 25% 40%;
+    }
+    
+    .title h1{
+        font-size: 3rem;
+        font-weight: 300;
+    }
+
+    .devices-image{
+        width: 23vw;
+    }
+
+
 }
