--- a/Front-End/css/studentMain.css
+++ b/Front-End/css/studentMain.css
@@ -35,7 +35,7 @@ article{
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column-reverse;
+    flex-direction: column;
     width: 500px;
     height: 500px;
     gap: 20px;
