--- a/Front-End/css/homeMain.css
+++ b/Front-End/css/homeMain.css
@@ -3,21 +3,23 @@ main{
     padding: 98px 96px;
     display: grid;
     place-items: center;
-    grid-template-columns: 40% 25% 35%;
+    grid-template-columns: 40% 20% 40%;
     grid-template-rows: 1fr 1fr;
     grid-template-areas:
      "title image2 card"
      "image1 image2 card";
+     justify-content: space-between;
 }
 
 .title{
     max-width: 500px;
+    grid-area: title;
+    place-self: start start;
 }
 
 .title h1{
-    grid-area: title;
     color: #353535;
-    font-size: 3.75rem;
+    font-size: 3.9rem;
     font-weight: 300;
 }
 
@@ -28,15 +30,18 @@ h1 span{
 
 .devices-image{
     grid-area: image1;
+    place-self: center start;
 }
 
 .student-image{
     grid-area: image2;
+    place-self: center center;
 }
 
 
 #buttons-options{
     grid-area: card;
+    place-self: start end;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -44,8 +49,8 @@ h1 span{
 }
 
 button{
-    width: 23vw;
-    height: 200px;
+    width: 24vw;
+    height: 238px;
     background-color: var(--primary-color);
     border: none;
     transition: all 400ms ease-in-out;
