--- a/Front-End/css/studentMain.css
+++ b/Front-End/css/studentMain.css
@@ -3,7 +3,7 @@ main{
     padding: 100px 105px 60px 105px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around; 
 
 }
 
