--- a/Front-End/css/reset.css
+++ b/Front-End/css/reset.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    color: #FFF;
+    /* color: #FFF; */
 }
 
 ol, ul, li {
