--- a/Front-End/css/studentMain.css
+++ b/Front-End/css/studentMain.css
@@ -24,6 +24,11 @@ article{
     justify-content: center;
     align-items: center;
     box-shadow: 1px 1px 12px #bebebe;
+    transition: all 400ms ease-in-out;
+}
+
+article:hover{
+    transform: scale(1.05);
 }
 
 .image-student-select{
@@ -39,18 +44,22 @@ article{
     height: auto;
     box-shadow: 1px 1px 12px #bebebe;
     padding: 71px;
-    rotate: -90deg;
+    rotate: -90deg; 
+    transition: all 400ms ease-in-out;
+}
+
+.graphic:hover {
+    transform: scale(1.05);
 }
 
 #graphic-student {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    /* rotate: -90deg; */
     justify-content: center;
     gap: 40px;
-
+   
 }
+
 .disciplines-span{
     display: flex;
     flex-direction: row;
@@ -111,11 +120,9 @@ article{
     color: #E5B657;
 }
 
-.teste-grafico{
+.content-elements-graphic{
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* justify-content: space-between; */
+    align-items: center;
     height: auto;
     gap: 16px;
 }
