--- a/Front-End/css/header.css
+++ b/Front-End/css/header.css
@@ -33,6 +33,12 @@ header i {
     cursor: pointer;
 }
 
+.back a{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
 .out__text{
     font-size: 2rem;
     font-weight: 500;
