--- a/Front-End/css/footer.css
+++ b/Front-End/css/footer.css
@@ -48,7 +48,6 @@ footer p {
     justify-content: center;
     transition: all 400ms ease-in-out;
     cursor: pointer;
-
 }
 
 .social a i {
@@ -78,7 +77,7 @@ footer p {
     }
 
     footer p {
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 
 }
@@ -156,7 +155,15 @@ footer p {
 
 @media (max-width: 489px) {
     footer {
-      padding: 85px 10px 13px 10px;
+       padding: 65px 10px 25px 10px;
+    }
+
+    .contact-item__text{
+        font-size: 0.95rem;
+    }
+
+    .contact-item i {
+        font-size: 1.35rem;
     }
 }
 
