--- a/Front-End/css/studentMain.css
+++ b/Front-End/css/studentMain.css
@@ -4,6 +4,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-around;
+
 }
 
 main h3 {
@@ -25,6 +26,7 @@ article {
     align-items: center;
     box-shadow: 1px 1px 12px #bebebe;
     transition: all 400ms ease-in-out;
+    padding: 18px;
 }
 
 article:hover {
@@ -129,10 +131,12 @@ article:hover {
     rotate: 90deg;
 }
 
+
 @media (max-width: 1410px) {
     body {
         grid-template-rows: 10vh auto 20vh;
     }
+
     main {
         flex-direction: column;
         gap: 50px;
@@ -143,14 +147,22 @@ article:hover {
     body {
         grid-template-rows: 10vh auto auto;
     }
+
     main {
         padding: 100px 30px 60px 30px;
+
     }
+
     .graphic {
-        rotate: -180deg;
+        rotate: 360deg;
     }
+
     .rotate {
-        rotate: 180deg;
+        rotate: 360deg;
+    }
+
+    .span-bar {
+        width: 48px;
     }
 }
 
@@ -158,24 +170,30 @@ article:hover {
     main {
         padding: 100px 15px 60px 15px;
     }
+
     article {
         width: 70vw;
         height: 50vh;
     }
+
     .graphic {
         width: 80vw;
         height: auto;
     }
+
     #graphic-student {
         gap: 15px;
-        padding-left: 15px;
+        padding-left: 19px;
     }
+
     .content-elements-graphic {
         gap: 10px;
     }
+
     .progress-bar {
         width: 40vw;
     }
+
     .image-student-select {
         width: 300px;
         height: 300px;
@@ -186,22 +204,19 @@ article:hover {
     main {
         padding: 60px 5px 60px 5px;
     }
+
     article {
         width: 75vw;
-        height: 40vh;
+        height: 45vh;
     }
+
     .graphic {
         padding: 50px 30px;
     }
+
     .image-student-select {
         width: 250px;
         height: 250px;
     }
-}
 
-@media (max-width: 315px) {
-    .image-student-select {
-        width: 200px;
-        height: 200px;
-    }
 }
